--- a/trunk/ressourcen/jd/languages/french.lng
+++ b/trunk/ressourcen/jd/languages/french.lng
@@ -10,7 +10,7 @@ addons.schedule.menu.edit = Éditer
 addons.schedule.menu.finished = Fini!
 addons.schedule.menu.maxdl = Max. Téléchargements simultanés
 addons.schedule.menu.maxspeed = Max. Vitesse de téléchargement
-addons.schedule.menu.p_time = Veuillez reconnencer ultérieurement
+addons.schedule.menu.p_time = Veuillez recommencer ultérieurement
 addons.schedule.menu.reconnect = Reconnexion
 addons.schedule.menu.redo = Réinitialise dans [hours]
 addons.schedule.menu.remain = Attente: 
@@ -46,12 +46,12 @@ controller.status.mustWaittime = Temps d'attente: %s
 controller.status.noConnaction = Pas de connexion
 controller.status.reconnect = Reconnexion
 controller.status.running = En cours...
-controller.status.tempUnavailable = Temporairement innaccessible
+controller.status.tempUnavailable = Temporairement inaccessible
 controller.status.termination = Finalisation...
 controller.status.toManyUser = Trop d'utilisateurs
 controller.status.unknownError = Erreur inconnue
 controller.status.wait = Attendre: %s sec.
-download.chunks.connection = connection
+download.chunks.connection = connexion
 download.error.message.chunk_incomplete = Partie(s) incomplète(s)
 download.error.message.crc = Mauvaise somme de vérification
 download.error.message.exception = Erreur fatale:
@@ -122,9 +122,9 @@ gui.config.download.name = Réseau/Téléchargements
 gui.config.download.network.extended = Paramètres avancés
 gui.config.download.network.tab = Internet & Paramètres Réseaux
 gui.config.download.proxy.host = Host/IP
-gui.config.download.proxy.pass = Mot de passe (Optionel)
+gui.config.download.proxy.pass = Mot de passe (Optionnel)
 gui.config.download.proxy.port = Port
-gui.config.download.proxy.user = Nom d'utilisateur (Optionel)
+gui.config.download.proxy.user = Nom d'utilisateur (Optionnel)
 gui.config.download.retries = Nombre de retentative maximum depuis une erreur temporaire
 gui.config.download.simultan_downloads = Téléchargements simultanés max.
 gui.config.download.startDownloadsOnStartUp = Démarrer les téléchargements au démarrage du programme
@@ -152,8 +152,8 @@ gui.config.general.downloadDirectory = Répertoire de téléchargement
 gui.config.general.filelogger = Faire un fichier log dans ./logs/ directory
 gui.config.general.filelogger.active = Filelogger: Écrire le log dans...
 gui.config.general.filelogger.path = Filelogger: Chemin vers le fichier log
-gui.config.general.langeditMode = Édition du fichier de language
-gui.config.general.language = Language
+gui.config.general.langeditMode = Édition du fichier de langage
+gui.config.general.language = Langage
 gui.config.general.link.chat = Discussion avec les développeurs du logiciel
 gui.config.general.link.darwine = Darwine (MAC)
 gui.config.general.link.dlccreate = Créer un DL-Container en ligne
@@ -163,13 +163,13 @@ gui.config.general.link.home = Site de jDownloader
 gui.config.general.link.jddownload = Download: jDownloader
 gui.config.general.link.jdtutorial = Premiers pas : Tutoriel
 gui.config.general.link.rar = RAR
-gui.config.general.link.support = Forum d'asssistance
+gui.config.general.link.support = Forum d'assistance
 gui.config.general.link.unrar = UnRAR
 gui.config.general.link.winne = Wine HQ (Linux)
 gui.config.general.link.wireshark = Wireshark
 gui.config.general.loggerLevel = Niveau de logging
 gui.config.general.name = Général
-gui.config.general.plaf = Style(needs JD-restart)
+gui.config.general.plaf = Style(Besoin que JD redémarre)
 gui.config.general.startDownloadsOnStartUp = Commencer les téléchargements au démarrage
 gui.config.general.theme = Thème
 gui.config.general.toDoWithDownloads = Retirer les téléchargements finis
@@ -201,17 +201,17 @@ gui.config.httpreconnect.connectPOSTParameter = POST code pour la connexion
 gui.config.httpreconnect.connectRequestProperties = Propriétés demandées pour la connexion
 gui.config.httpreconnect.connectType = Type de connexion
 gui.config.httpreconnect.connection = Connexion
-gui.config.httpreconnect.disconnect = Déconnecxon
+gui.config.httpreconnect.disconnect = Déconnexion
 gui.config.httpreconnect.disconnectPOSTParameter = POST code pour déconnexion
 gui.config.httpreconnect.disconnectRequestProperties = Propriétés demandées pour la déconnexion
-gui.config.httpreconnect.disconnectRequestPropertiesTooltip = <HTML>Enter the code this way:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
+gui.config.httpreconnect.disconnectRequestPropertiesTooltip = <HTML>Entrer le code de cette façon:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
 gui.config.httpreconnect.disconnectType = Genre de déconnexion
 gui.config.httpreconnect.importRouterData = Importer les données du routeur
 gui.config.httpreconnect.loginPOSTParameter = POST code pour login)
 gui.config.httpreconnect.loginRequestProperties = Propriétés requises pour le login
 gui.config.httpreconnect.loginRequestType = Genre de login
 gui.config.httpreconnect.loginString = Login string
-gui.config.httpreconnect.loginrequestProperties.tooltip = <HTML>Enter the code this way:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
+gui.config.httpreconnect.loginrequestProperties.tooltip = <HTML>Entrer le code de cette façon:<BR>key1==value1;;key2==value2;;key3==value3.1="value3.2"</HTML>
 gui.config.httpreconnect.logoffString = Logoff string
 gui.config.httpreconnect.password = Mot de passe
 gui.config.httpreconnect.retries = Retentatives (0=illimitées)
@@ -226,7 +226,7 @@ gui.config.httpreconnect.tab_login = Login
 gui.config.httpreconnect.tab_router = Router
 gui.config.httpreconnect.testreconnect = Reconnecter router
 gui.config.httpreconnect.userName = Nom d'utilisateur
-gui.config.httpreconnect.waitTimeForIPCheck = Délais d'attente pour la première vérifiation d'IP (sec)
+gui.config.httpreconnect.waitTimeForIPCheck = Délais d'attente pour la première vérification d'IP (sec)
 gui.config.infoFileWriter.name = Fichier d'information
 gui.config.interaction.noAction = Pas d'action
 gui.config.jac.column.method = Méthode
@@ -293,7 +293,7 @@ gui.config.plugin.host.column_id = ID
 gui.config.plugin.host.column_id2 = ID
 gui.config.plugin.host.column_version = Version
 gui.config.plugin.host.column_version2 = Version
-gui.config.plugin.host.desc = Attention!!\r\nLa jD Team n'est pas responsable de la conformité avec le TOS de l'hébergeur. \r\nLisez le TOS et avtiver le plugin seulement\r\nsi vous les acceptez!\r\nL'ordre des plugins définie la priorité de la sélection automatique des miroirs.\n\rLes plugins préférés doivent être en haut!
+gui.config.plugin.host.desc = Attention!!\r\nLa jD Team n'est pas responsable de la conformité avec le TOS de l'hébergeur. \r\nLisez le TOS et activer le plugin seulement\r\nsi vous les acceptez!\r\nL'ordre des plugins défini la priorité de la sélection automatique des miroirs.\n\rLes plugins préférés doivent être en haut!
 gui.config.plugin.host.name = Plugins de l'hébergeur
 gui.config.plugin.host.readAGB = Lire le TOS
 gui.config.plugin.optional.btn_openDir = Ouvrir le répertoire de l'Addon
@@ -632,7 +632,7 @@ gui.searchDialog.title = Recherche jDownloader
 gui.searchDialog.whatToSearchFor = Que cherchez vous?
 gui.splash.text.configLoaded = Charger la Configuration
 gui.splash.text.finished = Fini
-gui.splash.text.initcontroller = Démarrer le Controleur
+gui.splash.text.initcontroller = Démarrer le Contrôleur
 gui.splash.text.loadGUI = Charger Interface
 gui.splash.text.loadLanguage = Charger languages
 gui.splash.text.loadPlugins = Charger  Plugins
@@ -767,33 +767,33 @@ interaction.resetLink.whichLink = Quel lien va être réinitialisé?
 interaction.shutdown.dialog.msg = <h2><font color="red">Attention! Votre OS va s'éteindre</font></h2>
 interaction.shutdown.name = Quitter
 interaction.trigger.after_extract = Après l'extraction
-interaction.trigger.after_extract.desc = Éxécuté après que l'action de UnRAR soit finie.
+interaction.trigger.after_extract.desc = Exécuté après que l'action de UnRAR soit finie.
 interaction.trigger.after_reconnect = Après reconnexion
-interaction.trigger.after_reconnect.desc = Éxécuté après reconnexion
+interaction.trigger.after_reconnect.desc = Exécuté après reconnexion
 interaction.trigger.all_downloads_finished = Tous les téléchargements finis
-interaction.trigger.all_downloads_finished.desc = Éxécuté après que tous les téléchargement soient réussis ou râtés
+interaction.trigger.all_downloads_finished.desc = Exécuté après que tous les téléchargement soient réussis ou râtés
 interaction.trigger.app_start = Démarrage de l'application
 interaction.trigger.app_start.desc = Directement après que jDownloader ait démarré
 interaction.trigger.before_download = Avant un téléchargement
 interaction.trigger.before_download.desc = Éxcuté avant qu'un nouveau téléchargement ait commencé
 interaction.trigger.before_reconnect = Avant reconnexion
-interaction.trigger.before_reconnect.desc = Éxécuté avant reconnexion
+interaction.trigger.before_reconnect.desc = Exécuté avant reconnexion
 interaction.trigger.bot_detected = Robot rejeté
 interaction.trigger.bot_detected.desc = jDownloader a été détecté comme étant un robot
 interaction.trigger.container_download = Conteneur du lien de téléchargement
 interaction.trigger.download_download.desc = Description du Conteneur du lien de téléchargement(DLC,RSDF,CCF,...)
 interaction.trigger.download_successfull = Téléchargement fini et réussi
-interaction.trigger.download_successfull.desc = Éxécuté après un téléchargement réussi
+interaction.trigger.download_successfull.desc = Exécuté après un téléchargement réussi
 interaction.trigger.downloads_and_interactions_finished = Téléchargements
-interaction.trigger.downloads_and_interactions_finished.desc = Éxécuté après que tous les téléchargements aient été faits
+interaction.trigger.downloads_and_interactions_finished.desc = Exécuté après que tous les téléchargements aient été faits
 interaction.trigger.exit = Quitter JD
 interaction.trigger.exit.desc = Sera exécuté avant la fermeture de JD
 interaction.trigger.no_event = Pas d'événement
 interaction.trigger.no_event.desc = Pas d'événement
 interaction.trigger.package_finished = Paquet fini
-interaction.trigger.package_finished.desc = Éxécuté après que le téléchargement ait été fait
+interaction.trigger.package_finished.desc = Exécuté après que le téléchargement ait été fait
 interaction.trigger.single_download_failed = Téléchargement râté
-interaction.trigger.single_download_failed.desc = Éxécuté après que le téléchargement ait râté
+interaction.trigger.single_download_failed.desc = Exécuté après que le téléchargement ait raté
 interaction.trigger.testtrigger = Test de déclenchement
 interaction.trigger.testtrigger.desc = Vous pouvez exécuter le test de déclenchement via le menu
 interaction.unrar.always = Toujours
@@ -841,7 +841,7 @@ plugins.decrypt.general.hosterSelection = Sélection des hébergeurs
 plugins.decrypt.rlslog.hosterlist = Liste d'hébergeur (un hébergeur à la fois)
 plugins.decrypt.shareonall.ignorelist = Liste des hébergeurs ignorés (Un hébergeur à la fois)
 plugins.host.netload.try2SimultanDownloads = Essayer de télécharger deux fichiers en même temps
-plugins.host.premium.account = Compte Preniul
+plugins.host.premium.account = Compte Prenium
 plugins.host.premium.email = Email
 plugins.host.premium.password = Mot de Passe
 plugins.host.premium.useAccount = Utiliser un compte Prenium
@@ -851,7 +851,7 @@ plugins.hoster.datenklo.net.premiumUser = Utilisateur Prenium
 plugins.hoster.datenklo.net.usePremium = Utiliser un compte Prenium
 plugins.hoster.filefactory.getFileHeaderIfFilenameTooLong1 = Si le nom est réduit le fichier ne peut être téléchargé
 plugins.hoster.filefactory.getFileHeaderIfFilenameTooLong2 = (Demande le lecteur Captcha, peut demander un peu de temps)
-plugins.hoster.rapidshare.com.concernsFreeUser = (*2) termes seulements valables pour les utilisateurs "Free"
+plugins.hoster.rapidshare.com.concernsFreeUser = (*2) termes seulement valables pour les utilisateurs "Free"
 plugins.hoster.rapidshare.com.concernsPremiumUser = (*1) Les utilisateurs de compte Prenium doivent sélectionner un serveur à partir des paramètres en ligne de Rapidshare.com (RS.com Premium Service) si des liens directs sont sélectionnés!
 plugins.hoster.rapidshare.com.extendedTab = Paramètres avancés
 plugins.hoster.rapidshare.com.freeDownloadIfLimitNotReached = Limite des téléchargements gratuits non atteinte
@@ -919,9 +919,9 @@ plugins.optional.webinterface.connections = Connexion Max.
 plugins.optional.webinterface.loginname = Nom d'utilisateur
 plugins.optional.webinterface.loginpass = Nom d'utilisateur & mot de passe
 plugins.optional.webinterface.name = Interface Web
-plugins.optional.webinterface.needlogin = Besoin d'autentification
+plugins.optional.webinterface.needlogin = Besoin d'authentification
 plugins.optional.webinterface.port = Port
-plugins.optional.webinterface.refresh = Rafraichir automatiquement 
+plugins.optional.webinterface.refresh = Rafraîchir automatiquement 
 plugins.optional.webinterface.refresh_interval = Rafraichir l'interval
 plugins.rapidshare.captcha = OCR & temps d'attente
 plugins.rapidshare.captcha.progress = Détection du Captcha
@@ -946,7 +946,7 @@ sys.header.jdownloader = jDownloader
 sys.message.welcome = Bienvenue dans JDownloader
 sys.warning.dlcerror = Défaut DL-Container
 sys.warning.dlcerror.server = <b>Vous avez la dernières version de jD?</b> <br>Réponse du serveur:
-sys.warning.dlcerror_io = DLC: Erreur de Server (déconnecté?)
+sys.warning.dlcerror_io = DLC: Erreur de Serveur (déconnecté?)
 sys.warning.dlcerror_key = DLC:  Erreur de clé
 sys.warning.dlcerror_unknown = DLC Error:
 sys.warning.dlcerror_version = DLC Error: Version de jD dépassée (1)
@@ -974,15 +974,15 @@ download.connection.normal = Télécharger
 interaction.packagemanager.progress.loadpackages = Charger packagedata
 interaction.simpleExecute.name = Exécuter Programme/Script
 linkinformation.available.error = Erreur!
-main.start.logwarning.body = ATTENTION. Votre Loglevel est calibré sur %s et le Logfilewriter est calibré sur %s. Ces paramètres sont seulement conseillés pour debugger.
-main.start.logwarning.title = Log d'allerte
+main.start.logwarning.body = ATTENTION. Votre Loglevel est calibré sur %s et le Logfilewriter est calibré sur %s. Ces paramètres sont seulement conseillés pour débugger.
+main.start.logwarning.title = Log d'alerte
 main.status.inactive = off
 main.urls.faq = http://wiki.jdownloader.org/index.php?title=JDownloader_Wiki:Portai Anglais
 plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Pas de fichier trouvé. Vérifier votre lien.
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Rapidshare a détecté ce fichier comme étant illégal et il a donc été retiré.
 plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = Serveur hors ligne. Tenter plus tard.
-plugins.optional.httpliveheaderscripter.action.start = Démarrer Scripter
-plugins.optional.httpliveheaderscripter.gui.menu.edit = Editer
+plugins.optional.httpliveheaderscripter.action.start = Démarrer Scripte
+plugins.optional.httpliveheaderscripter.gui.menu.edit = Éditer
 plugins.optional.httpliveheaderscripter.gui.menu.edit.adddefine = Add un tag défini
 plugins.optional.httpliveheaderscripter.gui.menu.edit.addrequest = Add un tag de requête
 plugins.optional.httpliveheaderscripter.gui.menu.edit.addvariable = Ajouter une variable
@@ -998,7 +998,7 @@ plugins.optional.httpliveheaderscripter.gui.title = HTTP Live Header Script crea
 plugins.optional.httpliveheaderscripter.name = HTTPLiveHeaderScripter
 plugin.rapidshare.tickettime= Attendre %s min. pour le ticket
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Session de téléchargement expirée. Retentez.
-plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limit reached.
+plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = limite de 10 GB atteinte.
 plugins.hoster.rapidshare.com.info.error = <div style='text-align:center; width:100%; height:100%; color:red;'><b>Compte non trouvé!</b></div>
 addons.jdlowspeed.statusmessage.disabled = Désactiver la détection des connexions bas débit
 gui.config.download.buffersize = Taille max. du buffer[MB]
@@ -1024,7 +1024,7 @@ locale.lngs.english = Anglais
 locale.lngs.finnish = Finlandais
 locale.lngs.french = Français
 locale.lngs.german = Allemand
-locale.lngs.greek = Grèc
+locale.lngs.greek = Grec
 locale.lngs.hindi = Indien
 locale.lngs.italian = Italien
 locale.lngs.japanese = Japonais
@@ -1046,12 +1046,12 @@ plugins.hoster.rapidshare.de.premiumUser = Nom d'utilisateur Premium
 plugins.hoster.rapidshare.de.usePremium = Utiliser un compte Prenium
 plugins.optional.jdchat.doautotranslate = Traduire le chat
 plugins.optional.jdchat.doautotranslateself = Traduire tout ce que je dis
-plugins.optional.jdchat.locale = Paramètres de language
+plugins.optional.jdchat.locale = Paramètres de langage
 plugins.optional.jdchat.menu.windowstatus = Fenêtre de chat
 plugins.optional.jdchat.name = JD Chat
 plugins.optional.jdchat.performonstart = Passer des commandes une fois la connexion établie
 plugins.optional.jdchat.user = Pseudo
-plugins.optional.newsfeeds.getLatestSubscribedDownloads = Obtenir les dernierères améliorations
+plugins.optional.newsfeeds.getLatestSubscribedDownloads = Obtenir les dernières améliorations
 plugins.optional.newsfeeds.manageDownloadSubscriptions = Gérer les souscriptions aux téléchargements
 plugins.optional.newsfeeds.manageFeeds = Gérer les nouvelles
 plugins.optional.newsfeeds.pluginTitle = Vérifier les nouvelles
