--- a/trunk/ressourcen/jd/languages/french.lng
+++ b/trunk/ressourcen/jd/languages/french.lng
@@ -487,7 +487,7 @@ gui.linkgrabber.tabs.context.deleteOthers = Retirer tous les autres
 gui.linkgrabber.tabs.context.newPackage = Nouveau paquet
 gui.linkgrabber.tabs.context.newpackage = Nouveau paquet
 gui.linkgrabber.text = Ici vous pouvez assembler tous les liens collectés vers un paquet et accepter ceci plus tard.
-gui.linkgrabber.title = Collecteur de liens atif (D&D + Presse papier)
+gui.linkgrabber.title = Collecteur de liens actif (D&D + Presse papier)
 gui.linkgrabber.title_1 = Liens(s) dans
 gui.linkgrabber.title_2 = Paquet(s)
 gui.linkgrabber.writeInfoFile = Écrire les informations du fichiers pour ce paquet
@@ -743,7 +743,7 @@ interaction.externreconnect.progress.3_ipcheck = Reconnexion externe nouvelle IP
 interaction.externreconnect.retries = Tentatives Max. (-1 = infini)
 interaction.externreconnect.toString = exécuter une application de reconnexion externe
 interaction.externreconnect.waitForIp = Déalais d'attente pour une nouvelle IP (sec)
-interaction.externreconnect.waitForTermination = Délais d'attente pour l'éxécution de cmd (sec)
+interaction.externreconnect.waitForTermination = Délais d'attente pour l'exécution de cmd (sec)
 interaction.externreconnect.waitTimeToFirstIPCheck = Délais d'attente pour la première vérification d'IP (sec)
 interaction.infoFileWriter.content = Contenu:
 interaction.infoFileWriter.disable = Activer Infofilewriter
@@ -775,7 +775,7 @@ interaction.trigger.all_downloads_finished.desc = Exécuté après que tous les 
 interaction.trigger.app_start = Démarrage de l'application
 interaction.trigger.app_start.desc = Directement après que jDownloader ait démarré
 interaction.trigger.before_download = Avant un téléchargement
-interaction.trigger.before_download.desc = Éxcuté avant qu'un nouveau téléchargement ait commencé
+interaction.trigger.before_download.desc = Excuté avant qu'un nouveau téléchargement ait commencé
 interaction.trigger.before_reconnect = Avant reconnexion
 interaction.trigger.before_reconnect.desc = Exécuté avant reconnexion
 interaction.trigger.bot_detected = Robot rejeté
