--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -405,7 +405,7 @@ gui.configdialog.wikilink.theconfigurationmenu = http://jdownloader.org/wiki/ind
 gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
 gui.dialog.about.title = About JDownloader
 gui.dialogs.agb_tos.agbAccepted = Ich bin mit den Allgemeinen Geschäftsbedingungen einverstanden
-gui.dialogs.agb_tos.description2 = wurden nicht gelesen und akzeptiert.
+gui.dialogs.agb_tos.description = Die Allgemeinen Geschäftsbedingungen (AGB) von %s wurden nicht gelesen und akzeptiert.
 gui.dialogs.agb_tos.title = Allgemeine Geschäftsbedingungen nicht aktzeptiert
 gui.dialogs.helpDialog.btn.help = Hilfe anzeigen
 gui.dialogs.helpDialog.btn.ok = OK
