--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -407,7 +407,7 @@ gui.dialog.about.title = About JDownloader
 gui.dialogs.agb_tos.agbAccepted = Ich bin mit den Allgemeinen Geschäftsbedingungen einverstanden
 gui.dialogs.agb_tos.description = Die Allgemeinen Geschäftsbedingungen (AGB) von %s wurden nicht gelesen und akzeptiert.
 gui.dialogs.agb_tos.readAgb = %s AGB lesen
-gui.dialogs.agb_tos.title = Allgemeine Geschäftsbedingungen nicht aktzeptiert
+gui.dialogs.agb_tos.title = Allgemeine Geschäftsbedingungen nicht akzeptiert
 gui.dialogs.helpDialog.btn.help = Hilfe anzeigen
 gui.dialogs.helpDialog.btn.ok = OK
 gui.dialogs.helpDialog.defaultTitle = jDownloader Soforthilfe
