--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -415,8 +415,11 @@ gui.dialogs.progress.title = Fortschritt...bitte warten
 gui.download.bps = bytes/s
 gui.download.filesize_unknown = Dateigröße unbekannt
 gui.download.kbps = kb/s
+gui.download.waittime_status = Warte %s Min.
 gui.downloadlink.aborted = [abgebrochen]
 gui.downloadlink.disabled = [deaktiviert]
+gui.downloadlink.finished = [fertig]
+gui.downloadlink.hosterwaittime = [Warte auf neue IP]
 gui.downloadlink.offline = [offline]
 gui.downloadlink.status.crcfailed = Checksum Fehler
 gui.downloadlink.status.crcok = Checksum OK
@@ -438,6 +441,7 @@ gui.linkgrabber.btn.accept = Paket übernehmen
 gui.linkgrabber.btn.acceptAll = Alle übernehmen
 gui.linkgrabber.btn.sortPackages = Pakete sortieren
 gui.linkgrabber.cmb.insertAtPosition = Einfügen an Position:
+gui.linkgrabber.lbl.isoffline = [offline]
 gui.linkgrabber.lbl.isonline = [online]
 gui.linkgrabber.lbl.newpackage = Neues Paket
 gui.linkgrabber.lbl.notonlinechecked = [Verf. nicht überprüft]
@@ -611,6 +615,7 @@ gui.menu.plugins.container = Container
 gui.menu.plugins.decrypt = Decrypter
 gui.menu.plugins.help = ?
 gui.menu.plugins.host = Hoster
+gui.menu.plugins.phost = Premium Hoster
 gui.messages.outofmemoryerror = Ein Speicherfehler wurde festgestellt. Neustart dringend empfohlen!\r\nBitte benachrichtige die Entwickler über diesen Fehler!
 gui.plugins.decrypt.wiireloaded.calcresult = Ergebnis der Rechenaufgabe
 gui.reconnect.confirm = Wollen Sie sicher eine neue Verbindung aufbauen?
@@ -969,6 +974,7 @@ plugins.host.youtube.unavailable = YouTube Serverfehler
 plugins.hoster.datenklo.net.premiumPass = Premium Passwort
 plugins.hoster.datenklo.net.premiumUser = Premium Benutzername
 plugins.hoster.datenklo.net.usePremium = Premium Account verwenden
+plugins.hoster.error.agb = AGB nicht akzeptiert
 plugins.hoster.general.passwordProtectedInput = Die Links sind mit einem Passwort geschützt. Bitte geben Sie das Passwort ein:
 plugins.hoster.rapidshare.com.extendedTab = Erweiterte Einstellungen
 plugins.hoster.rapidshare.com.freeDownloadIfLimitNotReached = Premium: Free Download wenn Limit noch nicht erreicht wurde
