--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -836,9 +836,11 @@ plugins.decrypt.shareonall.ignorelist = List of ignored hoster (one hoster per r
 plugins.host.netload.try2SimultanDownloads = Try to load 2 files simultaneously
 plugins.host.premium.account = Premium Account
 plugins.host.premium.email = Email
+plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = The %s plugin does not support the Accountinfo feature yet.
 plugins.host.premium.info.files = Files
-plugins.host.premium.info.rapidpoints = RapidPoints
+plugins.host.premium.info.premiumpoints = PremiumPoints
+plugins.host.premium.info.status = Info
 plugins.host.premium.info.title = Accountinformation from %s for %s
 plugins.host.premium.info.trafficLeft = Traffic left
 plugins.host.premium.info.trafficShareLeft = Traffic Share left
