--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -958,9 +958,11 @@ plugins.host.imagefap.imageerror = Bildfehler
 plugins.host.netload.try2SimultanDownloads = Versuchen 2 Dateien gleichzeitig zu laden
 plugins.host.premium.account = Premium Account
 plugins.host.premium.email = Email
+plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
 plugins.host.premium.info.files = Dateien
-plugins.host.premium.info.rapidpoints = RapidPoints
+plugins.host.premium.info.premiumpoints = PremiumPoints
+plugins.host.premium.info.status = Info
 plugins.host.premium.info.title = Accountinfo von %s für %s
 plugins.host.premium.info.trafficLeft = Traffic übrig
 plugins.host.premium.info.trafficShareLeft = TrafficShare übrig
