--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1060,6 +1060,37 @@ plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Downloa
 plugins.optional.jdlowspeed.name = LowSpeed Erkennung
 plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
 plugins.optional.jdshutdown.name = JDShutdown
+plugins.optional.langfileeditor.addKey = Schlüssel hinzufügen
+plugins.optional.langfileeditor.adoptDefaults = Standardwert(e) übernehmen
+plugins.optional.langfileeditor.adoptDefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
+plugins.optional.langfileeditor.browse = Auswählen
+plugins.optional.langfileeditor.browseLanguageFile = Language File auswählen
+plugins.optional.langfileeditor.browseSourceFolder = Source Folder auswählen
+plugins.optional.langfileeditor.clearAllValues = Alle Werte löschen
+plugins.optional.langfileeditor.close = Schliessen
+plugins.optional.langfileeditor.deleteSelectedKeys = Ausgewählte(n) Schlüssel löschen
+plugins.optional.langfileeditor.editSelectedValues = Ausgewählte(n) Schlüssel bearbeiten
+plugins.optional.langfileeditor.entries = Einträge
+plugins.optional.langfileeditor.file = Datei
+plugins.optional.langfileeditor.key = Schlüssel
+plugins.optional.langfileeditor.languageFile = Language File: 
+plugins.optional.langfileeditor.languageFile.select = <Bitte Language File auswählen!>
+plugins.optional.langfileeditor.languageFileValue = Language File Wert
+plugins.optional.langfileeditor.name = JDLangFileEditor
+plugins.optional.langfileeditor.reload = Neu laden
+plugins.optional.langfileeditor.save = Speichern
+plugins.optional.langfileeditor.saveAs = Speichern Als
+plugins.optional.langfileeditor.selectMissing = Fehlende Einträge auswählen
+plugins.optional.langfileeditor.selectOld = Alte Einträge auswählen
+plugins.optional.langfileeditor.showDupes = Doppelte Einträge anzeigen
+plugins.optional.langfileeditor.show_gui = GUI anzeigen
+plugins.optional.langfileeditor.sortEntries = Einträge sortieren
+plugins.optional.langfileeditor.sourceFolder = Source Folder: 
+plugins.optional.langfileeditor.sourceFolder.select = <Bitte Source Folder auswählen!>
+plugins.optional.langfileeditor.sourceValue = Source Wert
+plugins.optional.langfileeditor.title = jDownloader - Language File Editor
+plugins.optional.langfileeditor.translate = Mit Google übersetzen
+plugins.optional.langfileeditor.translate.missing = Mit Google fehlende Einträge übersetzen
 plugins.optional.newsfeeds.addAboDialogKeyword = Schlüsselwort
 plugins.optional.newsfeeds.addAboDialogSelectFeed = Bitte Feed auswählen
 plugins.optional.newsfeeds.addAboDialogTitle = Abonnement hinzufügen
