--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -222,6 +222,7 @@ gui.config.general.toDoWithDownloads = Entferne fertig gestellte Downloads ...
 gui.config.general.toDoWithDownloads.atStart = beim Programstart
 gui.config.general.toDoWithDownloads.immediate = sofort
 gui.config.general.toDoWithDownloads.never = nicht
+gui.config.general.toDoWithDownloads.packageReady = wenn Paket komplett ist
 gui.config.general.webupdate.auto = automatisch, ohne Nachfrage ausführen
 gui.config.general.webupdate.beta = Auf Betaversion aktualisieren(Neustart nötig)
 gui.config.general.webupdate.disable = Update nur manuell durchführen
@@ -1084,7 +1085,7 @@ plugins.optional.langfileeditor.saveAs = Speichern Als
 plugins.optional.langfileeditor.selectMissing = Fehlende Einträge auswählen
 plugins.optional.langfileeditor.selectOld = Alte Einträge auswählen
 plugins.optional.langfileeditor.showDupes = Doppelte Einträge anzeigen
-plugins.optional.langfileeditor.show_gui = GUI anzeigen
+plugins.optional.langfileeditor.show_gui = LanguageEditor starten
 plugins.optional.langfileeditor.sortEntries = Einträge sortieren
 plugins.optional.langfileeditor.sourceFolder = Source Folder: 
 plugins.optional.langfileeditor.sourceFolder.select = <Bitte Source Folder auswählen!>
